<resources>
    <string name="app_name">K Anime Wallpaper</string>
    <string name="back_again">Press again to exit the application.</string>
    <string name="no_more_load">Nothing more</string>
    <string name="check_network">Load failed. Please check your network and pull to refresh again.</string>
    <string name="loading">Don\'t worry, it\'s OK right away.</string>
    <string name="load_no_pool">This website doesn\'t have album.</string>
    <string name="webview_error">Emm, it seems that something has gone wrong.\nTap to refresh.</string>
    <string name="loading_image">Obtaining image information, please wait.</string>
    <string name="check_no_new_version">Currently is the latest version</string>
    <string name="already_first_image">It is already the first image</string>
    <string name="already_last_image">It is already the last image</string>
    <string name="cannot_set_as_wallpaper">Can not set as wallpaper</string>
    <string name="cannot_search_random">The current website does not support random viewing</string>
    <string name="copied_link">Copied link</string>
    <string name="save_successfully">Save successfully</string>
    <string name="save_failed">Save failed</string>
    <string name="click_to_view"><u>Click to view</u></string>
    <string name="choose_qr_image_from_album">Please select the first QR code image from the album</string>
    <string name="alipay_not_installed">Alipay is not installed</string>
    <string name="already_set_clipboard">Copied to clipboard</string>
    <string name="already_add_to_clipboard">Appended to the last copied tag</string>
    <string name="already_in_download_queue">Already in download queue</string>
    <string name="not_support_ffmpeg">Your device cannot synthesize GIF</string>
    <string name="foreground_notify_title">Downloading Images</string>
    <string name="foreground_notify_msg">Click to open download manager</string>
    <string name="download_started">%s Start download</string>
    <string name="download_finished">%s / Download completed</string>
    <string name="download_failed">Download failed, click to try again</string>
    <string name="download_title_sample">%1$s %2$s (Sample)</string>
    <string name="download_title_large">%1$s %2$s (Large)</string>
    <string name="download_title_origin">%1$s %2$s (Origin)</string>
    <string name="base_konachan_s" translatable="false">Konachan(safe)</string>
    <string name="base_konachan_e" translatable="false">Konachan(r18)</string>
    <string name="base_yande" translatable="false">Yande.re</string>
    <string name="base_danbooru" translatable="false">Danbooru</string>
    <string name="base_safebooru" translatable="false">Safebooru</string>
    <string name="base_gelbooru" translatable="false">Gelbooru</string>
    <string name="base_lolibooru" translatable="false">Lolibooru</string>
    <string name="base_sankaku" translatable="false">Sankaku</string>
    <string name="base_zerochan" translatable="false">Zerochan</string>
    <string name="navigation_drawer_open">Open drawer layout</string>
    <string name="navigation_drawer_close">Close drawer layout</string>
    <string name="nav_post">Image</string>
    <string name="nav_pool">Album</string>
    <string name="nav_favorite_tag">Tags</string>
    <string name="nav_collection">Favorites</string>
    <string name="nav_download_manager">Download Manager</string>
    <string name="nav_feedback">Feedback</string>
    <string name="nav_setting">Setting &amp; Help</string>
    <string name="nav_pixiv_gif">Pixiv Gif DL</string>
    <string name="nav_reverse_search">Reverse Search</string>
    <string name="nav_game">Puzzle Game</string>
    <string name="nav_github">Github Page</string>
    <string name="nav_donate">Donate Us</string>
    <string name="feedback_title">E-mail via</string>
    <string name="save">Save</string>
    <string name="fab_home">Homepage</string>
    <string name="fab_random">Random</string>
    <string name="currently_loaded">Currently Loaded Page:&#160;</string>
    <string name="goto_page">Go to</string>
    <string name="load_failed">Failed to load, click to try again</string>
    <string name="spinner_search_tags">Search Tags</string>
    <string name="spinner_search_id">Search ID</string>
    <string name="spinner_search_chinese">Search Chinese</string>
    <string name="spinner_search_advanced">Advanced Search</string>
    <string name="cancel_search">Cancel</string>
    <string name="click_here">%sclick here.</string>
    <string name="search_instruction">Instruction</string>
    <string name="search_history">History</string>
    <string name="search_favorite_tag">Fav Tags</string>
    <string name="clear_all_history">Clear</string>
    <string name="setting_allow_play_sound">Allow to play sound</string>
    <string name="setting_screen_orientation_title">Screen rotation mode</string>
    <string name="setting_screen_orientation_item_forced_portrait">Portrait lock</string>
    <string name="setting_screen_orientation_item_forced_landscape">Landscape lock</string>
    <string name="setting_screen_orientation_item_auto_rotate">Auto rotate</string>
    <string name="setting_preload_image_only_wifi_title">Only preload original images in Wifi environment</string>
    <string name="setting_preload_image_only_wifi_desc">If enabled, it is forbidden to use mobile network to original images of the details page</string>
    <string name="setting_help_tag_type">See all tag types and meanings</string>
    <string name="setting_help_advanced_search">See cheat sheet of advanced search</string>
    <string name="setting_clear_cache_title">Clear cache</string>
    <string name="setting_clear_cache_desc">Only delete thumbnails and network data cache, without affecting your favorite tags and images</string>
    <string name="setting_check_update">Check update</string>
    <string name="setting_current_version">Current version: %s</string>
    <string name="image_detail_image">Image</string>
    <string name="image_detail_detail">Detail</string>
    <string name="image_detail_comment">Comment</string>
    <string name="image_id_symbol">#</string>
    <string name="detail_post_title">Image</string>
    <string name="detail_post_id">Image id:</string>
    <string name="detail_post_created_time">Created time:</string>
    <string name="detail_post_creator_id">Creator id:</string>
    <string name="detail_post_author">Creator name:</string>
    <string name="detail_post_size">Resolution:</string>
    <string name="detail_post_file_size">Size:</string>
    <string name="detail_post_source">Source:</string>
    <string name="detail_post_artist">Artist:</string>
    <string name="detail_post_rating">Rating:</string>
    <string name="detail_post_rating_s" translatable="false">Safe</string>
    <string name="detail_post_rating_e" translatable="false">R18</string>
    <string name="detail_post_rating_q" translatable="false">Questionable</string>
    <string name="detail_post_score">Score:</string>
    <string name="detail_tag_title">Tags</string>
    <string name="detail_tag_more_item_search">Search tag</string>
    <string name="detail_tag_more_item_copy_clipboard">Copy to clipboard</string>
    <string name="detail_tag_more_item_append_clipboard">Append to clipboard</string>
    <string name="detail_pool_title">Album</string>
    <string name="detail_pool_id">Album id:</string>
    <string name="detail_pool_name">Album title:</string>
    <string name="detail_pool_created_time">Created time:</string>
    <string name="detail_pool_updated_time">Updated time:</string>
    <string name="detail_pool_description">Description:</string>
    <string name="detail_pool_no_description">None</string>
    <string name="comment_no_comments">No comment</string>
    <string name="pool_updated_time" translatable="false">Updated %s</string>
    <string name="sort">Sort</string>
    <string name="sort_by_first_letter">Tag Name</string>
    <string name="sort_by_favorite_time">Favorite Time</string>
    <string name="order">Order</string>
    <string name="sort_order_ascend">Ascending</string>
    <string name="sort_order_descend">Descending</string>
    <string name="favorite_tag_annotation_empty">No annotations have been added yet</string>
    <string name="favorite_tag_favorite_at_time">Favorite at: %s</string>
    <string name="choose_all">All</string>
    <string name="edit">Edit</string>
    <string name="share">Share</string>
    <string name="share_title">Shared via</string>
    <string name="delete">Delete</string>
    <string name="action_wallpaper">Set as wallpaper</string>
    <string name="action_custom_wallpaper">Custom wallpaper</string>
    <string name="action_share">Share to others</string>
    <string name="crop_image">Crop Image</string>
    <string name="crop_failed">Crop failed</string>
    <string name="action_wallpaper_flag_desktop">Set as Home screen</string>
    <string name="action_wallpaper_flag_lockscreen">Set as Lock screen</string>
    <string name="action_wallpaper_flag_both">Set both</string>
    <string name="set_successfully">Set successfully</string>
    <string name="set_failed">Set failed</string>
    <string name="download_waiting">Waiting...</string>
    <string name="download_finish">Download completed and saved to Collection</string>
    <string name="pixiv_login_webview_title">Pixiv Login</string>
    <string name="pixiv_toast_login_success">Login successful</string>
    <string name="pixiv_toast_login_failed">Login failed</string>
    <string name="piviv_login_state_not_logged">[Not logged]</string>
    <string name="piviv_login_state_already_logged">[Logged]</string>
    <string name="piviv_login_state_login_expired">[Login expired]</string>
    <string name="pixiv_edit_hint_enter_id">Please enter Pixiv artwork Id</string>
    <string name="pixiv_start_download">Download</string>
    <string name="pixiv_toast_task_exist">Task already exists in the queue</string>
    <string name="pixiv_dl_state_connect">Connecting Pixiv...</string>
    <string name="pixiv_dl_state_connect_error">Connect Pixiv failed</string>
    <string name="pixiv_dl_state_download_zip">Downloading zip file...</string>
    <string name="pixiv_dl_state_download_zip_progress">Downloading zip file: %s</string>
    <string name="pixiv_dl_state_download_zip_error">Download zip file failed</string>
    <string name="pixiv_dl_state_unzip">Unzipping...</string>
    <string name="pixiv_dl_state_unzip_error">Unzip failed</string>
    <string name="pixiv_dl_state_make_gif">Synthesizing GIF</string>
    <string name="pixiv_dl_state_make_gif_error">Synthetic GIF failed</string>
    <string name="pixiv_dl_state_finish">GIF synthesis completed and saved to Collection</string>
    <string name="pixiv_dl_state_cancelled">Task cancelled</string>
    <string name="pixiv_dl_state_not_gif">The artwork is not a GIF</string>
    <string name="pixiv_dl_state_no_artwork">The artwork does not exist or has been deleted</string>
    <string name="pixiv_dl_state_need_login">The artwork needs to log in Pixiv before it can be accessed</string>
    <string name="pixiv_dl_state_login_expired">Pixiv login information expired, please log in again</string>
    <string name="spinner_copy_link">Copy Link</string>
    <string name="spinner_share_link">Share Link</string>
    <string name="spinner_browse_link">Browse Link</string>
    <string name="browse_title">Browse via</string>
    <string name="save_image">Save Image</string>
    <string name="website_name_sauce_nao" translatable="false">SauceNAO</string>
    <string name="website_name_trace_moe" translatable="false">WhatAnime</string>
    <string name="website_name_ascii2d" translatable="false">Ascii2d</string>
    <string name="website_name_yandex" translatable="false">Yandex</string>
    <string name="website_desc_sauce_nao">Search original image</string>
    <string name="website_desc_trace_moe">Search anime by image</string>
</resources>