<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_nav_menu_pixiv"
        android:shortcutId="nav_pixiv_gif"
        android:shortcutLongLabel="@string/nav_pixiv_gif"
        android:shortcutShortLabel="@string/nav_pixiv_gif">

        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.ess.anime.wallpaper.ui.activity.PixivGifActivity"
            android:targetPackage="com.ess.anime.wallpaper" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_nav_menu_reverse_search"
        android:shortcutId="nav_reverse_search"
        android:shortcutLongLabel="@string/nav_reverse_search"
        android:shortcutShortLabel="@string/nav_reverse_search">

        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.ess.anime.wallpaper.ui.activity.ReverseSearchActivity"
            android:targetPackage="com.ess.anime.wallpaper" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_nav_menu_game"
        android:shortcutId="nav_game"
        android:shortcutLongLabel="@string/nav_game"
        android:shortcutShortLabel="@string/nav_game">

        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.ess.anime.wallpaper.ui.activity.GameActivity"
            android:targetPackage="com.ess.anime.wallpaper" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>
</shortcuts>