<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tool_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            app:contentInsetStartWithNavigation="0dp"
            app:navigationIcon="@drawable/ic_back"
            app:theme="@style/ToolbarTheme"
            app:title="@string/nav_favorite_tag"
            app:titleTextAppearance="@style/Toolbar.TitleText">

            <RelativeLayout
                android:id="@+id/layout_editing"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone">

                <LinearLayout
                    android:id="@+id/layout_choose_all"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:orientation="vertical">

                    <com.mixiaoxiao.smoothcompoundbutton.SmoothCheckBox
                        android:id="@+id/cb_choose_all"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tint="@color/check_box_choose_all_color" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-2dp"
                        android:text="@string/choose_all"
                        android:textColor="@color/colorAccent"
                        android:textSize="11sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_choose_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@+id/layout_choose_all"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="8dp"
                    android:gravity="center"
                    android:text="@string/delete"
                    android:textColor="@color/colorAccent" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/layout_normal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_sort"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginEnd="12dp"
                    android:gravity="center"
                    android:text="@string/sort"
                    android:textColor="@color/colorAccent" />

                <TextView
                    android:id="@+id/tv_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginEnd="8dp"
                    android:gravity="center"
                    android:text="@string/edit"
                    android:textColor="@color/colorAccent" />
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_tag"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
