<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/tool_bar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            app:contentInsetStartWithNavigation="0dp"
            app:theme="@style/ToolbarTheme"
            app:title="@string/nav_post"
            app:titleTextAppearance="@style/Toolbar.TitleText">

            <ImageView
                android:id="@+id/iv_search"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="7dp"
                android:background="@drawable/background_item_selected"
                android:scaleType="centerInside"
                android:src="@drawable/ic_toolbar_search"/>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_post"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                android:scrollbarStyle="outsideOverlay"
                android:scrollbars="vertical">
            </android.support.v7.widget.RecyclerView>

            <include
                android:id="@+id/layout_load_result"
                layout="@layout/layout_load_result"/>
        </FrameLayout>
    </android.support.v4.widget.SwipeRefreshLayout>

    <toan.android.floatingactionmenu.FloatingActionsMenu
        android:id="@+id/floating_action_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="12dp"
        fab:fab_addButtonColorNormal="#FFFFFF"
        fab:fab_addButtonColorPressed="#FFFF00"
        fab:fab_addButtonPlusIconColor="#000000"
        fab:fab_animationScroll="scale"
        fab:fab_labelStyle="@style/fab_label_style">

        <toan.android.floatingactionmenu.FloatingActionButton
            android:id="@+id/fab_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="#FFFFFF"
            fab:fab_colorPressed="#FFFF00"
            fab:fab_icon="@drawable/ic_nav_menu_home"
            fab:fab_size="mini"
            fab:fab_title="@string/fab_home"/>

        <toan.android.floatingactionmenu.FloatingActionButton
            android:id="@+id/fab_random"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="#FFFFFF"
            fab:fab_colorPressed="#FFFF00"
            fab:fab_icon="@drawable/ic_nav_menu_game"
            fab:fab_size="mini"
            fab:fab_title="@string/fab_random"/>
    </toan.android.floatingactionmenu.FloatingActionsMenu>
</android.support.design.widget.CoordinatorLayout>